# piper-rs

./: Cargo.toml
crates/espeak-rs/: Cargo.toml
examples/: usage.rs  wav.rs
src/: lib.rs  model.rs
