[workspace]
members = ["crates/espeak-rs"]
resolver = "1"

[package]
name = "piper-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Use piper TTS models in Rust"
repository = "https://github.com/thewh1teagle/piper-rs"

[dependencies]
espeak-rs = { path = "crates/espeak-rs", version = "0.2.0", default-features = false, optional = true }
ndarray = "0.16.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
ort = { version = "=2.0.0-rc.12" }
espeak-ng = { version = "0.1.2", optional = true }

[dev-dependencies]
rodio = "0.19.0"

[features]
default = ["espeak-rs", "compile-espeak-intonations"]
espeak-rs = ["dep:espeak-rs"]
espeak-ng = ["dep:espeak-ng"]
compile-espeak-intonations = ["espeak-rs/compile-espeak-intonations"]
