[package]
name = "espeak-rs"
version = "0.2.0"
license = "MIT"
description = "Safe Rust bindings to espeak-ng"
keywords = ["espeak-ng", "audio", "tts", "speech", "rodio"]
repository = "https://github.com/thewh1teagle/piper-rs"
edition = "2021"

[dependencies]
# Local crates
espeak-rs-sys = { path = "../espeak-rs-sys", version = "0.2.0" }


[features]
default = ["compile-espeak-intonations"]
compile-espeak-intonations = ["espeak-rs-sys/compile-espeak-intonations"]
